--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
+  @import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
 :root{
     --yellow: #E6C744;
     --white:#fff;
     --black:#000;
     --purple:#C2C8DA;
     --grey:#242323;
-    --skyblue:#87CEEB;
+    
 }
 body,h2{
     margin: 0;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    font-family: 'Young Serif', serif;
+    font-family: 'Poppins', sans-serif;
 }
 .page{
     z-index: 5;
